Makes sitewide spacing fixes

--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -21,6 +21,10 @@ body>main>section {
 	width: 674px;
 }
 
+body>main>section.shorter {
+	margin-bottom: 3em;
+}
+
 body>main>section.expanded {
 	width: 1010px;
 }
@@ -360,6 +364,10 @@ ul.progress li, ol.progress li {
 		margin: 2.3em auto 4.8em 3em;
 	}
 
+	body>main>section.shorter {
+		margin-bottom: 2.8em;
+	}
+
 	body>main>section.expanded {
 		width: 89%;
 		max-width: inherit;
@@ -393,6 +401,10 @@ ul.progress li, ol.progress li {
 	body>main>section {
 		width: 92%;
 		margin: 2em auto 3.8em 1.1em;
+	}
+
+	body>main>section.shorter {
+		margin-bottom: 1.3em;
 	}
 }
 
