--- a/app/_scss/includes/_listing.scss
+++ b/app/_scss/includes/_listing.scss
@@ -5,7 +5,7 @@
 
 	.listing-item {
 		align-items: center;
-		margin-bottom: 7em;
+		margin-bottom: 6em;
 
 		.image {
 			figure {
@@ -92,7 +92,7 @@
 @media (max-width: 999px) {
 	.listing {
 		.listing-item {
-			margin-bottom: 5em;
+			margin-bottom: 4em;
 
 			.text {
 				width: inherit;
